# font-subset

./: .gitignore  Cargo.toml  README.md  colors.js  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.app.json  vite.config.ts
public/: background.avif
src/: app.tsx  font-preview.tsx  hooks.ts  lib.ts  main.tsx  subset-input.tsx  types.ts  utils.ts  utils.tsx  variation-axes.tsx  vite-env.d.ts
src-metadata/: Cargo.toml
src-metadata/src/: lib.rs
src/components/: font-preview.tsx  grid.tsx  groups.ts  subset-input.tsx  variation-axes.tsx
src/components/grid/: character-group.tsx  character-grouping.ts  grid-character.tsx  grid.tsx  use-character-selection.ts  use-font-subset.ts
src/extensions/: unicode-input.ts
src/styles/: colors.css  index.css  reset.css
