[package]
name = "ttf-parser-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = { version = "1.0.139", default-features = false, features = [
    "alloc",
] }
ttf-parser = "0.25.1"
wasm-bindgen = "0.2.100"
